
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int assert (int) ;

int
name_len (char *s1)
{

  unsigned char *s = (unsigned char *) s1;
  int len;


  if (0xC0 == (*s & 0xC0))
    return (2);


  for (len = 1; (*s); s += (*s) + 1)
    {
      len += *s + 1;
      assert (len < 80);
    }

  return (len);
}
